--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "version": "0.57",
   "manifest_version": 2,
-  "name": "Jose vs OSS",
-  "description": "Help Jose to fight Gihub issues",
+  "name": "José vs OSS",
+  "description": "Help José to fight GitHub issues",
 
   "icons": {
     "16":  "icon-16.png",
